--- a/api/package.json
+++ b/api/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "start": "node ./app.js",
     "dev": "PORT=3001 DEBUG=api:* nodemon ./app.js",
-    "seeds": "node ./bin/seeds.js"
+    "seeds": "node ./bin/seeds.js",
+    "test": "jest"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
