--- a/api/package.json
+++ b/api/package.json
@@ -16,13 +16,18 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-mongo": "~3.2.0",
     "cors": "^2.8.5",
     "debug": "^3.2.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "http-errors": "^1.7.2",
     "moment": "^2.29.1",
     "mongoose": "^5.11.19",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
