--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "~2.2.1",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "totp-generator": "0.0.8"
   }
